--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,4 @@ node_modules/
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/packs
-/public/packs-test
-/node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
+.idea
